cleaned up waypoint constructor code to use less duplicates. no function changes.